--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "aratanda",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.7.4"
-  }
+    "name": "aratanda",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start:dev": "nodemon",
+        "build": "rimraf ./build && tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^18.6.4",
+        "nodemon": "^2.0.19",
+        "rimraf": "^3.0.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "fastify": "^4.3.0"
+    }
 }
