--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 **/npm-debug.log*
 **/yarn-debug.log*
 **/yarn-error.log*
+
+**/__pycache__
+**/.env
+**/.history
+**/.hypothesis/
+**/build/
+**/reports/
