--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,9 @@
         "typescript": "^4.7.4"
     },
     "dependencies": {
+        "@fastify/cors": "^8.1.0",
+        "@zoralabs/zdk": "^2.1.4",
+        "axios": "^0.27.2",
         "fastify": "^4.3.0"
     }
 }
