--- a/aratanda-web/package.json
+++ b/aratanda-web/package.json
@@ -20,7 +20,8 @@
         "react-scripts": "5.0.1",
         "styled-components": "^5.3.5",
         "typescript": "^4.7.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "web3": "^1.7.5"
     },
     "scripts": {
         "start": "react-scripts start",
